[workspace]
resolver = "2"

members = [
    "crates/forge-errors",
    "contracts/forge-vesting",
    "contracts/forge-vesting-factory",
    "contracts/forge-stream",
    "contracts/forge-multisig",
    "contracts/forge-governor",
    "contracts/forge-oracle",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.6" }
forge-errors = { workspace = true }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
