[package]
name = "forge-vesting-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.7.6" }
forge-errors = { path = "../../crates/forge-errors" }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }
